objects/ALRA_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <label>Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>ALRA Audits</relationshipLabel>
        <relationshipName>ALRA_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Opp_Ratio__c</fullName>
        <label>Closed Opp Ratio</label>
        <precision>6</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_Range__c</fullName>
        <label>Distance Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_Unit__c</fullName>
        <label>Distance Unit</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ALRA Audits</relationshipLabel>
        <relationshipName>ALRA_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Class__c</fullName>
        <label>Partner Class</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Tier__c</fullName>
        <description>Tier of Partner</description>
        <label>Partner Tier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Partner Account</description>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ALRA Audits</relationshipLabel>
        <relationshipName>ALRA_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Randomly_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Randomly selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scenario_Applied__c</fullName>
        <label>Scenario Applied</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>ALRA Audit</label>
    <listViews>
        <fullName>Myview</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>Scenario_Applied__c</columns>
        <columns>Partner__c</columns>
        <columns>Partner_Tier__c</columns>
        <columns>Closed_Opp_Ratio__c</columns>
        <columns>Distance_Range__c</columns>
        <columns>Distance__c</columns>
        <columns>Distance_Unit__c</columns>
        <columns>Campaign__c</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Randomly_selected__c</columns>
        <columns>Selected__c</columns>
        <columns>Exception__c</columns>
        <filterScope>Everything</filterScope>
        <label>Myview</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ALRA Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ALRA Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>